@@ -65,9 +65,9 @@ import java.util.concurrent.ForkJoinPool;
 public class Comparison {
 
     /**
-     * Whether to parallelize the comparison.
+     * The number of threads to use.
      */
-    private boolean parallelized = false;
+    private int numThreads = 1;
 
     /**
      * The graph type used.
@@ -78,11 +78,6 @@ public class Comparison {
      * The output stream.
      */
     private PrintStream out;
-
-    /**
-     * Whether the tables should be tab-delimited.
-     */
-    private boolean tabDelimitedTables;
 
     /**
      * Whether to save the graphs.
@@ -115,7 +110,7 @@ public class Comparison {
     private String dataPath;
 
     /**
-     * The results path.
+     * The result path.
      */
     private String resultsPath;
 
@@ -138,14 +133,18 @@ public class Comparison {
      * The comparison graph type.
      */
     private ComparisonGraph comparisonGraph = ComparisonGraph.true_DAG;
+    /**
+     * Indicates whether the tables are tab-delimited.
+     */
+    private boolean tabDelimitedTables = false;
 
     /**
-     * <p>Setter for the field <code>parallelized</code>.</p>
+     * Sets the number of threads to be used for the concurrent execution.
      *
-     * @param parallelized a boolean
+     * @param numThreads the number of threads to be set
      */
-    public void setParallelized(boolean parallelized) {
-        this.parallelized = parallelized;
+    public void setNumThreads(int numThreads) {
+        this.numThreads = numThreads;
     }
 
     /**
@@ -169,8 +168,7 @@ public class Comparison {
      * @param statistics  a {@link edu.cmu.tetrad.algcomparison.statistic.Statistics} object
      * @param parameters  a {@link edu.cmu.tetrad.util.Parameters} object
      */
-    public void compareFromFiles(String dataPath, String resultsPath, Algorithms algorithms,
-                                 Statistics statistics, Parameters parameters) {
+    public void compareFromFiles(String dataPath, String resultsPath, Algorithms algorithms, Statistics statistics, Parameters parameters) {
         for (Algorithm algorithm : algorithms.getAlgorithms()) {
             if (algorithm instanceof ExternalAlgorithm) {
                 throw new IllegalArgumentException("Not expecting any implementations of ExternalAlgorithm here.");
@@ -207,32 +205,31 @@ public class Comparison {
     }
 
     /**
-     * <p>generateReportFromExternalAlgorithms.</p>
+     * Generates a report from external algorithms.
      *
-     * @param dataPath    a {@link java.lang.String} object
-     * @param resultsPath a {@link java.lang.String} object
-     * @param algorithms  a {@link edu.cmu.tetrad.algcomparison.algorithm.Algorithms} object
-     * @param statistics  a {@link edu.cmu.tetrad.algcomparison.statistic.Statistics} object
-     * @param parameters  a {@link edu.cmu.tetrad.util.Parameters} object
+     * @param dataPath    - The path to the data file.
+     * @param resultsPath - The path to where the report will be saved.
+     * @param algorithms  - The algorithms to compare.
+     * @param statistics  - The statistics to include in the report.
+     * @param parameters  - The parameters to use for the algorithms.
      */
-    public void generateReportFromExternalAlgorithms(String dataPath, String resultsPath, Algorithms algorithms,
-                                                     Statistics statistics, Parameters parameters) {
-        generateReportFromExternalAlgorithms(dataPath, resultsPath, "Comparison.txt", algorithms,
-                statistics, parameters);
+    public void generateReportFromExternalAlgorithms(String dataPath, String resultsPath, Algorithms algorithms, Statistics statistics, Parameters parameters) {
+        generateReportFromExternalAlgorithms(dataPath, resultsPath, "Comparison.txt", algorithms, statistics, parameters);
     }
 
     /**
-     * <p>generateReportFromExternalAlgorithms.</p>
+     * Generates a report from external algorithms based on the given parameters.
      *
-     * @param dataPath       a {@link java.lang.String} object
-     * @param resultsPath    a {@link java.lang.String} object
-     * @param outputFileName a {@link java.lang.String} object
-     * @param algorithms     a {@link edu.cmu.tetrad.algcomparison.algorithm.Algorithms} object
-     * @param statistics     a {@link edu.cmu.tetrad.algcomparison.statistic.Statistics} object
-     * @param parameters     a {@link edu.cmu.tetrad.util.Parameters} object
+     * @param dataPath       The path to the data files.
+     * @param resultsPath    The path to save the results.
+     * @param outputFileName The name of the output file.
+     * @param algorithms     The collection of algorithms to compare.
+     * @param statistics     The statistics to include in the report.
+     * @param parameters     The additional parameters for the algorithms.
+     * @throws IllegalArgumentException if any algorithm in the collection is not an instance of ExternalAlgorithm.
+     * @throws NullPointerException     if there are no files in the specified data path.
      */
-    public void generateReportFromExternalAlgorithms(String dataPath, String resultsPath, String outputFileName, Algorithms algorithms,
-                                                     Statistics statistics, Parameters parameters) {
+    public void generateReportFromExternalAlgorithms(String dataPath, String resultsPath, String outputFileName, Algorithms algorithms, Statistics statistics, Parameters parameters) {
 
         this.saveGraphs = false;
         this.dataPath = dataPath;
@@ -240,8 +237,7 @@ public class Comparison {
 
         for (Algorithm algorithm : algorithms.getAlgorithms()) {
             if (!(algorithm instanceof ExternalAlgorithm)) {
-                throw new IllegalArgumentException(
-                        "Expecting all algorithms to implement ExternalAlgorithm.");
+                throw new IllegalArgumentException("Expecting all algorithms to implement ExternalAlgorithm.");
             }
         }
 
@@ -272,39 +268,38 @@ public class Comparison {
     }
 
     /**
-     * <p>compareFromSimulations.</p>
+     * Compare simulation results using the provided parameters and write the comparison results to a file.
      *
-     * @param resultsPath a {@link java.lang.String} object
-     * @param simulations a {@link edu.cmu.tetrad.algcomparison.simulation.Simulations} object
-     * @param algorithms  a {@link edu.cmu.tetrad.algcomparison.algorithm.Algorithms} object
-     * @param statistics  a {@link edu.cmu.tetrad.algcomparison.statistic.Statistics} object
-     * @param parameters  a {@link edu.cmu.tetrad.util.Parameters} object
+     * @param resultsPath The path to write the comparison results file.
+     * @param simulations The simulations to compare results from.
+     * @param algorithms  The algorithms used in the simulations.
+     * @param statistics  The statistics used in the simulations.
+     * @param parameters  The parameters used in the simulations.
      */
-    public void compareFromSimulations(String resultsPath, Simulations simulations, Algorithms algorithms,
-                                       Statistics statistics, Parameters parameters) {
+    public void compareFromSimulations(String resultsPath, Simulations simulations, Algorithms algorithms, Statistics statistics, Parameters parameters) {
         compareFromSimulations(resultsPath, simulations, "Comparison.txt", algorithms, statistics, parameters);
     }
 
     /**
-     * Compares algorithms.
+     * Compares the results from simulations using various algorithms and statistics.
      *
-     * @param resultsPath    Path to the file where the output should be printed.
-     * @param simulations    The list of simulationWrapper that is used to generate graphs and data for the comparison.
-     * @param algorithms     The list of algorithms to be compared.
-     * @param statistics     The list of statistics on which to compare the algorithm, and their utility weights.
-     * @param outputFileName a {@link java.lang.String} object
-     * @param parameters     a {@link edu.cmu.tetrad.util.Parameters} object
+     * @param resultsPath    The path to the result directory.
+     * @param simulations    The Simulations object containing the simulations to compare.
+     * @param outputFileName The name of the output file.
+     * @param algorithms     The Algorithms object containing the algorithms to compare.
+     * @param statistics     The Statistics object containing the statistics to use for comparison.
+     * @param parameters     The Parameters object containing the necessary parameters for the comparison.
      */
-    public void compareFromSimulations(String resultsPath, Simulations simulations, String outputFileName, Algorithms algorithms,
-                                       Statistics statistics, Parameters parameters) {
+    public void compareFromSimulations(String resultsPath, Simulations simulations, String outputFileName, Algorithms algorithms, Statistics statistics, Parameters parameters) {
         this.resultsPath = resultsPath;
+        setNumThreads(parameters.getInt(Params.NUM_THREADS));
 
         PrintStream stdout = (PrintStream) parameters.get("printStream", System.out);
 
         // Create output file.
         try {
             File dir = new File(resultsPath);
-            dir.mkdirs();
+            if (!dir.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir);
             File file = new File(dir, outputFileName);
             this.out = new PrintStream(Files.newOutputStream(file.toPath()));
         } catch (Exception e) {
@@ -314,7 +309,7 @@ public class Comparison {
         this.out.println(new Date());
 
         // Set up simulations--create data and graphs, read in parameters. The parameters
-        // are set in the parameters object.
+        // are set in the parameter object.
         List<SimulationWrapper> simulationWrappers = new ArrayList<>();
 
         int numRuns = parameters.getInt("numRuns");
@@ -382,38 +377,34 @@ public class Comparison {
                 DataType algDataType = algorithmWrapper.getDataType();
                 DataType simDataType = simulationWrapper.getDataType();
                 if (!(algDataType == DataType.Mixed || (algDataType == simDataType))) {
-                    stdout.println("Type mismatch: " + algorithmWrapper.getDescription()
-                            + " / " + simulationWrapper.getDescription());
+                    stdout.println("Type mismatch: " + algorithmWrapper.getDescription() + " / " + simulationWrapper.getDescription());
                 }
 
                 if (algorithmWrapper.getAlgorithm() instanceof ExternalAlgorithm external) {
-                    external.setSimIndex(simulationWrappers.indexOf(external.getSimulation()));
+                    external.setSimIndex(simulationWrappers.indexOf(simulationWrapper));
                 }
 
-                algorithmSimulationWrappers.add(new AlgorithmSimulationWrapper(
-                        algorithmWrapper, simulationWrapper));
+                algorithmSimulationWrappers.add(new AlgorithmSimulationWrapper(algorithmWrapper, simulationWrapper));
             }
         }
 
-        // Run all of the algorithms and compile statistics.
-        double[][][][] allStats = new double[0][][][];
+        // Run all the algorithms and compile statistics.
+        double[][][][] allStats;
+
         try {
-            allStats = calcStats(algorithmSimulationWrappers, algorithmWrappers, simulationWrappers,
-                    statistics, numRuns, stdout);
+            allStats = calcStats(algorithmSimulationWrappers, simulationWrappers, statistics, numRuns, stdout);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
-
 
         {
             int numTables = allStats.length;
             int numStats = allStats[0][0].length - 1;
 
-            double[][][] statTables = calcStatTables(allStats, Mode.Average, numTables, algorithmSimulationWrappers,
-                    numStats, statistics);
+            double[][][] statTables = calcStatTables(allStats, Mode.Average, numTables, algorithmSimulationWrappers, numStats, statistics);
             double[] utilities = calcUtilities(statistics, algorithmSimulationWrappers, statTables[0]);
 
-            // Add utilities to table as the last column.
+            // Add utilities to the table as the last column.
             for (int u = 0; u < numTables; u++) {
                 for (int t = 0; t < algorithmSimulationWrappers.size(); t++) {
                     statTables[u][t][numStats] = utilities[t];
@@ -435,9 +426,6 @@ public class Comparison {
             this.out.println("Simulations:");
             this.out.println();
 
-//            if (simulationWrappers.size() == 1) {
-//                out.println(simulationWrappers.get(0).getDescription());
-//            } else {
             int i = 0;
 
             for (SimulationWrapper simulation : simulationWrappers) {
@@ -505,10 +493,9 @@ public class Comparison {
 
             this.out.println();
 
-            statTables = calcStatTables(allStats, Mode.Average, numTables,
-                    algorithmSimulationWrappers, numStats, statistics);
+            statTables = calcStatTables(allStats, Mode.Average, numTables, algorithmSimulationWrappers, numStats, statistics);
 
-            // Add utilities to table as the last column.
+            // Add utilities to the table as the last column.
             for (int u = 0; u < numTables; u++) {
                 for (int t = 0; t < algorithmSimulationWrappers.size(); t++) {
                     statTables[u][t][numStats] = utilities[t];
@@ -516,12 +503,10 @@ public class Comparison {
             }
 
             // Print all the tables.
-            printStats(statTables, statistics, Mode.Average, newOrder, algorithmSimulationWrappers,
-                    algorithmWrappers, simulationWrappers, utilities, parameters);
+            printStats(statTables, statistics, Mode.Average, newOrder, algorithmSimulationWrappers, algorithmWrappers, simulationWrappers, utilities, parameters);
 
 
-            statTables = calcStatTables(allStats, Mode.StandardDeviation, numTables,
-                    algorithmSimulationWrappers, numStats, statistics);
+            statTables = calcStatTables(allStats, Mode.StandardDeviation, numTables, algorithmSimulationWrappers, numStats, statistics);
 
             for (int u = 0; u < numTables; u++) {
                 for (int t = 0; t < algorithmSimulationWrappers.size(); t++) {
@@ -529,11 +514,9 @@ public class Comparison {
                 }
             }
 
-            printStats(statTables, statistics, Mode.StandardDeviation, newOrder, algorithmSimulationWrappers, algorithmWrappers,
-                    simulationWrappers, utilities, parameters);
+            printStats(statTables, statistics, Mode.StandardDeviation, newOrder, algorithmSimulationWrappers, algorithmWrappers, simulationWrappers, utilities, parameters);
 
-            statTables = calcStatTables(allStats, Mode.MinValue, numTables, algorithmSimulationWrappers,
-                    numStats, statistics);
+            statTables = calcStatTables(allStats, Mode.MinValue, numTables, algorithmSimulationWrappers, numStats, statistics);
 
             for (int u = 0; u < numTables; u++) {
                 for (int t = 0; t < algorithmSimulationWrappers.size(); t++) {
@@ -541,11 +524,9 @@ public class Comparison {
                 }
             }
 
-            printStats(statTables, statistics, Mode.MinValue, newOrder, algorithmSimulationWrappers, algorithmWrappers,
-                    simulationWrappers, utilities, parameters);
+            printStats(statTables, statistics, Mode.MinValue, newOrder, algorithmSimulationWrappers, algorithmWrappers, simulationWrappers, utilities, parameters);
 
-            statTables = calcStatTables(allStats, Mode.MaxValue, numTables, algorithmSimulationWrappers,
-                    numStats, statistics);
+            statTables = calcStatTables(allStats, Mode.MaxValue, numTables, algorithmSimulationWrappers, numStats, statistics);
 
             for (int u = 0; u < numTables; u++) {
                 for (int t = 0; t < algorithmSimulationWrappers.size(); t++) {
@@ -553,11 +534,9 @@ public class Comparison {
                 }
             }
 
-            printStats(statTables, statistics, Mode.MaxValue, newOrder, algorithmSimulationWrappers, algorithmWrappers,
-                    simulationWrappers, utilities, parameters);
+            printStats(statTables, statistics, Mode.MaxValue, newOrder, algorithmSimulationWrappers, algorithmWrappers, simulationWrappers, utilities, parameters);
 
-            statTables = calcStatTables(allStats, Mode.MedianValue, numTables, algorithmSimulationWrappers,
-                    numStats, statistics);
+            statTables = calcStatTables(allStats, Mode.MedianValue, numTables, algorithmSimulationWrappers, numStats, statistics);
 
             for (int u = 0; u < numTables; u++) {
                 for (int t = 0; t < algorithmSimulationWrappers.size(); t++) {
@@ -565,15 +544,7 @@ public class Comparison {
                 }
             }
 
-            printStats(statTables, statistics, Mode.MedianValue, newOrder, algorithmSimulationWrappers, algorithmWrappers,
-                    simulationWrappers, utilities, parameters);
-
-//            // Add utilities to table as the last column.
-//            for (int u = 0; u < numTables; u++) {
-//                for (int t = 0; t < algorithmSimulationWrappers.size(); t++) {
-//                    statTables[u][t][numStats] = utilities[t];
-//                }
-//            }
+            printStats(statTables, statistics, Mode.MedianValue, newOrder, algorithmSimulationWrappers, algorithmWrappers, simulationWrappers, utilities, parameters);
         }
 
         for (int i = 0; i < simulations.getSimulations().size(); i++) {
@@ -584,11 +555,11 @@ public class Comparison {
     }
 
     /**
-     * Saves simulationWrapper data.
+     * Saves the simulation data to file in the specified data path.
      *
-     * @param dataPath   The path to the directory where the simulationWrapper data should be saved.
-     * @param simulation The simulate used to generate the graphs and data.
-     * @param parameters The parameters to be used in the simulationWrapper.
+     * @param dataPath   the path where the data files will be saved
+     * @param simulation the simulation object containing the data to be saved
+     * @param parameters the parameters used in the simulation
      */
     public void saveToFiles(String dataPath, Simulation simulation, Parameters parameters) {
 
@@ -618,27 +589,28 @@ public class Comparison {
                     index++;
 
                     subdir = new File(dir, "" + index);
-                    subdir.mkdirs();
+                    if (!subdir.mkdirs())
+                        TetradLogger.getInstance().forceLogMessage("Directory already exists: " + subdir);
                 }
 
                 File dir1 = new File(subdir, "graph");
                 File dir2 = new File(subdir, "data");
 
-                dir1.mkdirs();
-                dir2.mkdirs();
+                if (!dir1.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir1);
+                if (!dir2.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir2);
 
                 File dir3 = null;
 
                 if (isSaveCPDAGs()) {
                     dir3 = new File(subdir, "cpdags");
-                    dir3.mkdirs();
+                    if (!dir3.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir3);
                 }
 
                 File dir4 = null;
 
                 if (isSavePags()) {
                     dir4 = new File(subdir, "pags");
-                    dir4.mkdirs();
+                    if (!dir4.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir4);
                 }
 
                 for (int j = 0; j < simulationWrapper.getNumDataModels(); j++) {
@@ -673,23 +645,24 @@ public class Comparison {
                 out.close();
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            TetradLogger.getInstance().forceLogMessage("IO Exception: " + e.getMessage());
         }
     }
 
     /**
-     * Saves simulationWrapper data.
+     * Saves the results of a single simulation to files.
      *
-     * @param dataPath   The path to the directory where the simulationWrapper data should be saved.
-     * @param simulation The simulate used to generate the graphs and data.
-     * @param parameters The parameters to be used in the simulationWrapper.
+     * @param dataPath   The path to the directory where the files will be saved.
+     * @param simulation The simulation object containing the data and graphs.
+     * @param parameters The parameters used for the simulation.
      */
     public void saveToFilesSingleSimulation(String dataPath, Simulation simulation, Parameters parameters) {
         File dir0 = new File(dataPath);
         File dir = new File(dir0, "save");
+        setNumThreads(1);
 
         deleteFilesThenDirectory(dir);
-        dir.mkdirs();
+        if (!dir.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir);
 
         try {
             PrintStream _out = new PrintStream(Files.newOutputStream(new File(dir, "parameters.txt").toPath()));
@@ -703,8 +676,8 @@ public class Comparison {
                 File dir1 = new File(dir, "graph");
                 File dir2 = new File(dir, "data");
 
-                dir1.mkdirs();
-                dir2.mkdirs();
+                if (!dir1.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir1);
+                if (!dir2.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir2);
 
                 return;
             }
@@ -712,21 +685,21 @@ public class Comparison {
             File dir1 = new File(dir, "graph");
             File dir2 = new File(dir, "data");
 
-            dir1.mkdirs();
-            dir2.mkdirs();
+            if (!dir1.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir1);
+            if (!dir2.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir2);
 
             File dir3 = null;
 
             if (isSaveCPDAGs()) {
                 dir3 = new File(dir, "cpdags");
-                dir3.mkdirs();
+                if (!dir3.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir3);
             }
 
             File dir4 = null;
 
             if (isSavePags()) {
                 dir4 = new File(dir, "pags");
-                dir4.mkdirs();
+                if (!dir4.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir4);
             }
 
             for (int j = 0; j < simulation.getNumDataModels(); j++) {
@@ -752,18 +725,20 @@ public class Comparison {
                 }
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            TetradLogger.getInstance().forceLogMessage("IO Exception: " + e.getMessage());
         }
     }
 
     /**
-     * <p>configuration.</p>
+     * Generates a configuration file containing information about available algorithms, statistics, independence tests,
+     * scores, and simulations.
      *
-     * @param path a {@link java.lang.String} object
+     * @param path The path to save the configuration file.
      */
     public void configuration(String path) {
         try {
-            new File(path).mkdirs();
+            if (!new File(path).mkdirs())
+                TetradLogger.getInstance().forceLogMessage("Path already exists: " + new File(path));
 
             PrintStream out = new PrintStream(Files.newOutputStream(new File(path, "Configuration.txt").toPath()));
 
@@ -780,18 +755,16 @@ public class Comparison {
             out.println("Algorithms that take an independence test (using an example independence test):");
             out.println();
 
-            for (Class clazz : new ArrayList<>(algorithms)) {
+            for (Class<?> clazz : new ArrayList<>(algorithms)) {
                 if (Experimental.class.isAssignableFrom(clazz)) {
                     continue;
                 }
 
-                Constructor[] constructors = clazz.getConstructors();
+                Constructor<?>[] constructors = clazz.getConstructors();
 
-                for (Constructor constructor : constructors) {
-                    if (constructor.getParameterTypes().length == 1
-                            && constructor.getParameterTypes()[0] == IndependenceWrapper.class) {
-                        Algorithm algorithm = (Algorithm) constructor.newInstance(
-                                FisherZ.class.newInstance());
+                for (Constructor<?> constructor : constructors) {
+                    if (constructor.getParameterTypes().length == 1 && constructor.getParameterTypes()[0] == IndependenceWrapper.class) {
+                        Algorithm algorithm = (Algorithm) constructor.newInstance(FisherZ.class.getDeclaredConstructor().newInstance());
                         out.println(clazz.getSimpleName() + ": " + algorithm.getDescription());
                         if (HasParameters.class.isAssignableFrom(clazz)) {
                             printParameters(algorithm.getParameters(), allParams, out);
@@ -807,18 +780,16 @@ public class Comparison {
             out.println("Algorithms that take a score (using an example score):");
             out.println();
 
-            for (Class clazz : new ArrayList<>(algorithms)) {
+            for (Class<?> clazz : new ArrayList<>(algorithms)) {
                 if (Experimental.class.isAssignableFrom(clazz)) {
                     continue;
                 }
 
-                Constructor[] constructors = clazz.getConstructors();
+                Constructor<?>[] constructors = clazz.getConstructors();
 
-                for (Constructor constructor : constructors) {
-                    if (constructor.getParameterTypes().length == 1
-                            && constructor.getParameterTypes()[0] == ScoreWrapper.class) {
-                        Algorithm algorithm = (Algorithm) constructor.newInstance(
-                                BdeuScore.class.newInstance());
+                for (Constructor<?> constructor : constructors) {
+                    if (constructor.getParameterTypes().length == 1 && constructor.getParameterTypes()[0] == ScoreWrapper.class) {
+                        Algorithm algorithm = (Algorithm) constructor.newInstance(BdeuScore.class.getDeclaredConstructor().newInstance());
                         out.println(clazz.getSimpleName() + ": " + algorithm.getDescription());
                         if (HasParameters.class.isAssignableFrom(clazz)) {
                             printParameters(algorithm.getParameters(), allParams, out);
@@ -832,14 +803,14 @@ public class Comparison {
             out.println("Algorithms with blank constructor:");
             out.println();
 
-            for (Class clazz : new ArrayList<>(algorithms)) {
+            for (Class<?> clazz : new ArrayList<>(algorithms)) {
                 if (Experimental.class.isAssignableFrom(clazz)) {
                     continue;
                 }
 
-                Constructor[] constructors = clazz.getConstructors();
+                Constructor<?>[] constructors = clazz.getConstructors();
 
-                for (Constructor constructor : constructors) {
+                for (Constructor<?> constructor : constructors) {
                     if (constructor.getParameterTypes().length == 0) {
                         Algorithm algorithm = (Algorithm) constructor.newInstance();
                         out.println(clazz.getSimpleName() + ": " + algorithm.getDescription());
@@ -854,14 +825,14 @@ public class Comparison {
             out.println("Available Statistics:");
             out.println();
 
-            for (Class clazz : statistics) {
+            for (Class<?> clazz : statistics) {
                 if (Experimental.class.isAssignableFrom(clazz)) {
                     continue;
                 }
 
-                Constructor[] constructors = clazz.getConstructors();
+                Constructor<?>[] constructors = clazz.getConstructors();
 
-                for (Constructor constructor : constructors) {
+                for (Constructor<?> constructor : constructors) {
                     if (constructor.getParameterTypes().length == 0) {
                         Statistic statistic = (Statistic) constructor.newInstance();
                         out.println(clazz.getSimpleName() + ": " + statistic.getDescription());
@@ -873,14 +844,14 @@ public class Comparison {
             out.println("Available Independence Tests:");
             out.println();
 
-            for (Class clazz : independenceWrappers) {
+            for (Class<?> clazz : independenceWrappers) {
                 if (Experimental.class.isAssignableFrom(clazz)) {
                     continue;
                 }
 
-                Constructor[] constructors = clazz.getConstructors();
+                Constructor<?>[] constructors = clazz.getConstructors();
 
-                for (Constructor constructor : constructors) {
+                for (Constructor<?> constructor : constructors) {
                     if (constructor.getParameterTypes().length == 0) {
                         IndependenceWrapper independence = (IndependenceWrapper) constructor.newInstance();
                         out.println(clazz.getSimpleName() + ": " + independence.getDescription());
@@ -895,14 +866,14 @@ public class Comparison {
             out.println("Available Scores:");
             out.println();
 
-            for (Class clazz : scoreWrappers) {
+            for (Class<?> clazz : scoreWrappers) {
                 if (Experimental.class.isAssignableFrom(clazz)) {
                     continue;
                 }
 
-                Constructor[] constructors = clazz.getConstructors();
+                Constructor<?>[] constructors = clazz.getConstructors();
 
-                for (Constructor constructor : constructors) {
+                for (Constructor<?> constructor : constructors) {
                     if (constructor.getParameterTypes().length == 0) {
                         ScoreWrapper score = (ScoreWrapper) constructor.newInstance();
                         out.println(clazz.getSimpleName() + ": " + score.getDescription());
@@ -917,14 +888,14 @@ public class Comparison {
             out.println("Available Simulations:");
             out.println();
 
-            for (Class clazz : simulations) {
+            for (Class<?> clazz : simulations) {
                 if (Experimental.class.isAssignableFrom(clazz)) {
                     continue;
                 }
 
-                Constructor[] constructors = clazz.getConstructors();
+                Constructor<?>[] constructors = clazz.getConstructors();
 
-                for (Constructor constructor : constructors) {
+                for (Constructor<?> constructor : constructors) {
                     if (constructor.getParameterTypes().length == 0) {
                         Simulation simulation = (Simulation) constructor.newInstance();
                         out.println(clazz.getSimpleName() + ": " + simulation.getDescription());
@@ -939,7 +910,7 @@ public class Comparison {
 
             out.close();
         } catch (Exception e) {
-            e.printStackTrace();
+            TetradLogger.getInstance().forceLogMessage("Exception: " + e.getMessage());
         }
     }
 
@@ -993,9 +964,22 @@ public class Comparison {
         return simulationWrappers;
     }
 
+    /**
+     * Calculates statistics for algorithm simulations.
+     *
+     * @param algorithmSimulationWrappers A list of AlgorithmSimulationWrapper objects representing the algorithm
+     *                                    simulations.
+     * @param simulationWrappers          A list of SimulationWrapper objects representing the simulations.
+     * @param statistics                  The Statistics object containing statistical measures to be computed.
+     * @param numRuns                     The number of runs for each simulation.
+     * @param stdout                      The PrintStream object for printing the progress.
+     * @return A 4-dimensional array of doubles containing the computed statistics. The dimensions are as follows: -
+     * first dimension: graph types (four types in total) - second dimension: algorithmSimulationWrappers size - third
+     * dimension: statistics size + one (additional slot for storing total statistics) - fourth dimension: numRuns
+     */
     private double[][][][] calcStats(List<AlgorithmSimulationWrapper> algorithmSimulationWrappers,
-                                     List<AlgorithmWrapper> algorithmWrappers, List<SimulationWrapper> simulationWrappers,
-                                     Statistics statistics, int numRuns, PrintStream stdout) throws Exception {
+                                     List<SimulationWrapper> simulationWrappers, Statistics statistics,
+                                     int numRuns, PrintStream stdout) {
         final int numGraphTypes = 4;
 
         this.graphTypeUsed = new boolean[4];
@@ -1003,22 +987,16 @@ public class Comparison {
         double[][][][] allStats = new double[4][algorithmSimulationWrappers.size()][statistics.size() + 1][numRuns];
 
         List<Callable<Boolean>> tasks = new ArrayList<>();
-        int index = 0;
 
         for (int algSimIndex = 0; algSimIndex < algorithmSimulationWrappers.size(); algSimIndex++) {
             for (int runIndex = 0; runIndex < numRuns; runIndex++) {
-                AlgorithmSimulationWrapper algorithmSimulationWrapper = algorithmSimulationWrappers.get(algSimIndex);
-                Run run = new Run(algSimIndex, runIndex, index++, algorithmSimulationWrapper);
-                Callable<Boolean> task = new AlgorithmTask(algorithmSimulationWrappers,
-                        algorithmWrappers, simulationWrappers,
-                        statistics, numGraphTypes, allStats, run, stdout);
-//                task.call();
+                Run run = new Run(algSimIndex, runIndex);
+                Callable<Boolean> task = new AlgorithmTask(algorithmSimulationWrappers, simulationWrappers, statistics, numGraphTypes, allStats, run, stdout);
                 tasks.add(task);
             }
         }
 
-        int parallelism = Runtime.getRuntime().availableProcessors();
-        ForkJoinPool pool = new ForkJoinPool(parallelism);
+        ForkJoinPool pool = new ForkJoinPool(numThreads);
 
         try {
             pool.invokeAll(tasks);
@@ -1031,108 +1009,109 @@ public class Comparison {
     }
 
     /**
-     * <p>isShowSimulationIndices.</p>
+     * Checks if the simulation indices are currently being shown.
      *
-     * @return a boolean
+     * @return true if the simulation indices are being shown, false otherwise
      */
     public boolean isShowSimulationIndices() {
         return this.showSimulationIndices;
     }
 
     /**
-     * <p>Setter for the field <code>showSimulationIndices</code>.</p>
+     * Sets whether to show simulation indices or not.
      *
-     * @param showSimulationIndices a boolean
+     * @param showSimulationIndices true to show simulation indices, false otherwise
      */
     public void setShowSimulationIndices(boolean showSimulationIndices) {
         this.showSimulationIndices = showSimulationIndices;
     }
 
     /**
-     * <p>isShowAlgorithmIndices.</p>
+     * Indicates whether the algorithm indices should be shown.
      *
-     * @return a boolean
+     * @return {@code true} if the algorithm indices should be shown, {@code false} otherwise.
      */
     public boolean isShowAlgorithmIndices() {
         return this.showAlgorithmIndices;
     }
 
     /**
-     * <p>Setter for the field <code>showAlgorithmIndices</code>.</p>
+     * Sets whether to show algorithm indices.
      *
-     * @param showAlgorithmIndices a boolean
+     * @param showAlgorithmIndices true to show algorithm indices, false otherwise
      */
     public void setShowAlgorithmIndices(boolean showAlgorithmIndices) {
         this.showAlgorithmIndices = showAlgorithmIndices;
     }
 
     /**
-     * <p>isShowUtilities.</p>
+     * Checks if the utilities are currently being shown.
      *
-     * @return True iff a column of utilities marked "W" should be shown in the output.
+     * @return true if the utilities are being shown, false otherwise.
      */
     public boolean isShowUtilities() {
         return this.showUtilities;
     }
 
     /**
-     * <p>Setter for the field <code>showUtilities</code>.</p>
+     * Sets the value of the showUtilities property.
      *
-     * @param showUtilities True iff a column of utilities marked "W" should be shown in the output.
+     * @param showUtilities the new value for the showUtilities property
      */
     public void setShowUtilities(boolean showUtilities) {
         this.showUtilities = showUtilities;
     }
 
     /**
-     * <p>isSortByUtility.</p>
+     * Returns whether utility does the sorting.
      *
-     * @return True iff the output should be sorted by utility.
+     * @return {@code true} if utility does the sorting, {@code false} otherwise.
      */
     public boolean isSortByUtility() {
         return this.sortByUtility;
     }
 
     /**
-     * <p>Setter for the field <code>sortByUtility</code>.</p>
+     * Set the flag to determine if utility should do the sorting.
      *
-     * @param sortByUtility true iff the output should be sorted by utility.
+     * @param sortByUtility a flag indicating whether to sort by utility or not
      */
     public void setSortByUtility(boolean sortByUtility) {
         this.sortByUtility = sortByUtility;
     }
 
     /**
-     * <p>isSaveCPDAGs.</p>
+     * Checks if the CPDAGs are saved.
      *
-     * @return True if CPDAGs should be saved out.
+     * @return true if the CPDAGs are saved, false otherwise.
      */
     public boolean isSaveCPDAGs() {
         return this.saveCPDAGs;
     }
 
     /**
-     * <p>Setter for the field <code>saveCPDAGs</code>.</p>
+     * Sets whether to save CPDAGs.
      *
-     * @param saveCPDAGs True if CPDAGs should be saved out.
+     * @param saveCPDAGs indicates whether to save CPDAGs or not
      */
     public void setSaveCPDAGs(boolean saveCPDAGs) {
         this.saveCPDAGs = saveCPDAGs;
     }
 
     /**
-     * <p>isSavePags.</p>
+     * Checks if the "savePags" variable is true or false.
      *
-     * @return True if CPDAGs should be saved out.
+     * @return true if the "savePags" variable is true, false otherwise.
      */
     public boolean isSavePags() {
         return this.savePags;
     }
 
     /**
-     * <p>Setter for the field <code>savePags</code>.</p>
+     * Sets the value of 'savePags' flag. This method is used to set the value of the 'savePags' flag, which indicates
+     * whether the pags should be saved or not.
      *
-     * @param savePags a boolean
+     * @param savePags a boolean value indicating whether to save the pags or not.
      */
     public void setSavePags(boolean savePags) {
         this.savePags = savePags;
@@ -1148,63 +1127,37 @@ public class Comparison {
     }
 
     /**
-     * <p>Setter for the field <code>saveData</code>.</p>
+     * Sets the flag indicating whether to save data.
      *
-     * @param saveData a boolean
+     * @param saveData true if data should be saved, false otherwise
      */
     public void setSaveData(boolean saveData) {
         this.saveData = saveData;
     }
 
     /**
-     * <p>isTabDelimitedTables.</p>
+     * Sets whether to save graphs.
      *
-     * @return True iff tables should be tab delimited (e.g. for easy pasting into Excel).
-     */
-    public boolean isTabDelimitedTables() {
-        return this.tabDelimitedTables;
-    }
-
-    /**
-     * <p>Setter for the field <code>tabDelimitedTables</code>.</p>
-     *
-     * @param tabDelimitedTables True iff tables should be tab delimited (e.g. for easy pasting into Excel).
-     */
-    public void setTabDelimitedTables(boolean tabDelimitedTables) {
-        this.tabDelimitedTables = tabDelimitedTables;
-    }
-
-    /**
-     * <p>isSaveGraphs.</p>
-     *
-     * @return True if all graphs should be saved to files.
-     */
-    public boolean isSaveGraphs() {
-        return this.saveGraphs;
-    }
-
-    /**
-     * <p>Setter for the field <code>saveGraphs</code>.</p>
-     *
-     * @param saveGraphs True if all graphs should be saved to files.
+     * @param saveGraphs true to save graphs, false otherwise
      */
     public void setSaveGraphs(boolean saveGraphs) {
         this.saveGraphs = saveGraphs;
     }
 
     /**
-     * The type of graph the results are compared to.
+     * Returns the ComparisonGraph instance.
      *
-     * @return a {@link edu.cmu.tetrad.algcomparison.Comparison.ComparisonGraph} object
+     * @return the ComparisonGraph instance
      */
     public ComparisonGraph getComparisonGraph() {
         return this.comparisonGraph;
     }
 
     /**
-     * The type of graph the results are compared to.
+     * Sets the comparison graph.
      *
-     * @param comparisonGraph a {@link edu.cmu.tetrad.algcomparison.Comparison.ComparisonGraph} object
+     * @param comparisonGraph the comparison graph to be set
+     * @throws NullPointerException if the comparison graph is null
      */
     public void setComparisonGraph(ComparisonGraph comparisonGraph) {
         if (comparisonGraph == null) {
@@ -1252,29 +1205,28 @@ public class Comparison {
             if (currentFile.isDirectory()) {
                 deleteFilesThenDirectory(currentFile);
             } else {
-                currentFile.delete();
+                if (!currentFile.delete())
+                    TetradLogger.getInstance().forceLogMessage("File could not be deleted: " + currentFile);
             }
         }
 
-        dir.delete();
+        if (!dir.delete()) TetradLogger.getInstance().forceLogMessage("Directory could not be deleted: " + dir);
     }
 
-    private void doRun(List<AlgorithmSimulationWrapper> algorithmSimulationWrappers,
-                       List<AlgorithmWrapper> algorithmWrappers, List<SimulationWrapper> simulationWrappers,
-                       Statistics statistics,
+    private void doRun(List<AlgorithmSimulationWrapper> algorithmSimulationWrappers, List<SimulationWrapper> simulationWrappers, Statistics statistics,
                        int numGraphTypes, double[][][][] allStats, Run run, PrintStream stdout) {
         stdout.println();
-        stdout.println("Run " + (run.getRunIndex() + 1));
+        stdout.println("Run " + (run.runIndex() + 1));
         stdout.println();
 
-        AlgorithmSimulationWrapper algorithmSimulationWrapper = algorithmSimulationWrappers.get(run.getAlgSimIndex());
+        AlgorithmSimulationWrapper algorithmSimulationWrapper = algorithmSimulationWrappers.get(run.algSimIndex());
         AlgorithmWrapper algorithmWrapper = algorithmSimulationWrapper.getAlgorithmWrapper();
         SimulationWrapper simulationWrapper = algorithmSimulationWrapper.getSimulationWrapper();
-        DataModel data = simulationWrapper.getDataModel(run.getRunIndex());
-        Graph trueGraph = simulationWrapper.getTrueGraph(run.getRunIndex());
 
-        stdout.println((run.getAlgSimIndex() + 1) + ". " + algorithmWrapper.getDescription()
-                + " simulationWrapper: " + simulationWrapper.getDescription());
+        DataModel data = simulationWrapper.getDataModel(run.runIndex());
+        Graph trueGraph = simulationWrapper.getTrueGraph(run.runIndex());
+
+        stdout.println((run.algSimIndex() + 1) + ". " + algorithmWrapper.getDescription() + " simulationWrapper: " + simulationWrapper.getDescription());
 
         long start = MillisecondTimes.cpuTimeMillis();
         Graph graphOut;
@@ -1302,8 +1254,7 @@ public class Comparison {
                 RandomUtil.shuffle(indices);
 
                 List<DataModel> dataModels = new ArrayList<>();
-                int randomSelectionSize = algorithmWrapper.getAlgorithmSpecificParameters().getInt(
-                        "randomSelectionSize");
+                int randomSelectionSize = algorithmWrapper.getAlgorithmSpecificParameters().getInt("randomSelectionSize");
                 for (int i = 0; i < FastMath.min(numDataModels, randomSelectionSize); i++) {
                     dataModels.add(simulationWrapper.getSimulation().getDataModel(indices.get(i)));
                 }
@@ -1311,38 +1262,25 @@ public class Comparison {
                 Parameters _params = algorithmWrapper.getAlgorithmSpecificParameters();
                 graphOut = ((MultiDataSetAlgorithm) algorithm).search(dataModels, _params);
             } else {
-                boolean copyData = true;
-                DataModel dataModel = copyData ? data.copy() : data;
                 Parameters _params = algorithmWrapper.getAlgorithmSpecificParameters();
-                graphOut = algorithm.search(dataModel, _params);
+                graphOut = algorithm.search(data, _params);
             }
         } catch (Exception e) {
-            stdout.println("Could not run " + algorithmWrapper.getDescription());
-            e.printStackTrace();
+            TetradLogger.getInstance().forceLogMessage("Could not run " + algorithmWrapper.getDescription());
             return;
         }
 
         int simIndex = simulationWrappers.indexOf(simulationWrapper) + 1;
-        int algIndex = algorithmWrappers.indexOf(algorithmWrapper) + 1;
 
         long stop = MillisecondTimes.cpuTimeMillis();
 
         long elapsed = (stop - start);
 
-        saveGraph(this.resultsPath, graphOut, run.getRunIndex(), simIndex, algorithmWrapper, elapsed, stdout);
+        saveGraph(this.resultsPath, graphOut, run.runIndex(), simIndex, algorithmWrapper, elapsed, stdout);
 
         if (trueGraph != null) {
             graphOut = GraphUtils.replaceNodes(graphOut, trueGraph.getNodes());
-        }
 
-        if (algorithmWrapper.getAlgorithm() instanceof ExternalAlgorithm extAlg) {
-            extAlg.setSimIndex(simulationWrappers.indexOf(simulationWrapper));
-            extAlg.setSimulation(simulationWrapper.getSimulation());
-            extAlg.setPath(this.resultsPath);
-            elapsed = extAlg.getElapsedTime(data, simulationWrapper.getSimulationSpecificParameters());
-        }
-
-        synchronized (this) {
 
             Graph[] est = new Graph[numGraphTypes];
 
@@ -1351,22 +1289,20 @@ public class Comparison {
             if (this.comparisonGraph == ComparisonGraph.true_DAG) {
                 comparisonGraph = new EdgeListGraph(trueGraph);
             } else if (this.comparisonGraph == ComparisonGraph.CPDAG_of_the_true_DAG) {
-                Graph dag = new EdgeListGraph(trueGraph);
-                comparisonGraph = GraphTransforms.cpdagForDag(dag);
+                comparisonGraph = GraphTransforms.cpdagForDag(trueGraph);
             } else if (this.comparisonGraph == ComparisonGraph.PAG_of_the_true_DAG) {
                 comparisonGraph = GraphTransforms.dagToPag(trueGraph);
             } else {
                 throw new IllegalArgumentException("Unrecognized graph type.");
             }
 
-//        Graph comparisonGraph = trueGraph == null ? null : algorithmSimulationWrapper.getComparisonGraph(trueGraph);
             est[0] = new EdgeListGraph(graphOut);
             this.graphTypeUsed[0] = true;
 
             if (data.isMixed()) {
-                est[1] = getSubgraph(est[0], true, true, simulationWrapper.getDataModel(run.getRunIndex()));
-                est[2] = getSubgraph(est[0], true, false, simulationWrapper.getDataModel(run.getRunIndex()));
-                est[3] = getSubgraph(est[0], false, false, simulationWrapper.getDataModel(run.getRunIndex()));
+                est[1] = getSubgraph(est[0], true, true, simulationWrapper.getDataModel(run.runIndex()));
+                est[2] = getSubgraph(est[0], true, false, simulationWrapper.getDataModel(run.runIndex()));
+                est[3] = getSubgraph(est[0], false, false, simulationWrapper.getDataModel(run.runIndex()));
 
                 this.graphTypeUsed[1] = true;
                 this.graphTypeUsed[2] = true;
@@ -1378,9 +1314,9 @@ public class Comparison {
             truth[0] = new EdgeListGraph(comparisonGraph);
 
             if (data.isMixed()) {
-                truth[1] = getSubgraph(comparisonGraph, true, true, simulationWrapper.getDataModel(run.getRunIndex()));
-                truth[2] = getSubgraph(comparisonGraph, true, false, simulationWrapper.getDataModel(run.getRunIndex()));
-                truth[3] = getSubgraph(comparisonGraph, false, false, simulationWrapper.getDataModel(run.getRunIndex()));
+                truth[1] = getSubgraph(comparisonGraph, true, true, simulationWrapper.getDataModel(run.runIndex()));
+                truth[2] = getSubgraph(comparisonGraph, true, false, simulationWrapper.getDataModel(run.runIndex()));
+                truth[3] = getSubgraph(comparisonGraph, false, false, simulationWrapper.getDataModel(run.runIndex()));
             }
 
             for (int u = 0; u < numGraphTypes; u++) {
@@ -1405,15 +1341,22 @@ public class Comparison {
                         stat = _stat.getValue(truth[u], est[u], data);
                     }
 
-                    allStats[u][run.getAlgSimIndex()][statIndex][run.getRunIndex()] = stat;
+                    synchronized (this) {
+                        allStats[u][run.algSimIndex()][statIndex][run.runIndex()] = stat;
+                    }
                 }
             }
 
         }
+
+        if (algorithmWrapper.getAlgorithm() instanceof ExternalAlgorithm extAlg) {
+            extAlg.setSimIndex(simulationWrappers.indexOf(simulationWrapper));
+            extAlg.setSimulation(simulationWrapper.getSimulation());
+            extAlg.setPath(this.resultsPath);
+        }
     }
 
-    private void saveGraph(String resultsPath, Graph graph, int i, int simIndex,
-                           AlgorithmWrapper algorithmWrapper, long elapsed, PrintStream stdout) {
+    private void saveGraph(String resultsPath, Graph graph, int i, int simIndex, AlgorithmWrapper algorithmWrapper, long elapsed, PrintStream stdout) {
         if (!this.saveGraphs) {
             return;
         }
@@ -1425,10 +1368,11 @@ public class Comparison {
             File fileElapsed;
 
             File dir = new File(resultsPath, "results/" + description + "/" + simIndex);
-            dir.mkdirs();
+            if (!dir.mkdirs()) TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dir);
 
             File dirElapsed = new File(resultsPath, "elapsed/" + description + "/" + simIndex);
-            dirElapsed.mkdirs();
+            if (!dirElapsed.mkdirs())
+                TetradLogger.getInstance().forceLogMessage("Directory already exists: " + dirElapsed);
 
             if (resultsPath != null) {
                 file = new File(dir, "graph." + (i + 1) + ".txt");
@@ -1443,38 +1387,24 @@ public class Comparison {
             out.close();
 
             PrintStream outElapsed = new PrintStream(fileElapsed);
-//            stdout.println("Saving graph to " + file.getAbsolutePath());
             outElapsed.println(elapsed);
             outElapsed.close();
         } catch (FileNotFoundException e) {
-            e.printStackTrace();
+            TetradLogger.getInstance().forceLogMessage("File not found exception: " + e.getMessage());
         }
     }
 
     private String getHeader(int u) {
-        String header;
-
-        switch (u) {
-            case 0:
-                header = "All edges";
-                break;
-            case 1:
-                header = "Discrete-discrete";
-                break;
-            case 2:
-                header = "Discrete-continuous";
-                break;
-            case 3:
-                header = "Continuous-continuous";
-                break;
-            default:
-                throw new IllegalStateException();
-        }
-        return header;
+        return switch (u) {
+            case 0 -> "All edges";
+            case 1 -> "Discrete-discrete";
+            case 2 -> "Discrete-continuous";
+            case 3 -> "Continuous-continuous";
+            default -> throw new IllegalStateException();
+        };
     }
 
-    private double[][][] calcStatTables(double[][][][] allStats, Mode mode, int numTables,
-                                        List<AlgorithmSimulationWrapper> wrappers, int numStats, Statistics statistics) {
+    private double[][][] calcStatTables(double[][][][] allStats, Mode mode, int numTables, List<AlgorithmSimulationWrapper> wrappers, int numStats, Statistics statistics) {
         double[][][] statTables = new double[numTables][wrappers.size()][numStats + 1];
 
         for (int u = 0; u < numTables; u++) {
@@ -1545,11 +1475,7 @@ public class Comparison {
         return statTables;
     }
 
-    private void printStats(double[][][] statTables, Statistics statistics, Mode mode, int[] newOrder,
-                            List<AlgorithmSimulationWrapper> algorithmSimulationWrappers,
-                            List<AlgorithmWrapper> algorithmWrappers,
-                            List<SimulationWrapper> simulationWrappers, double[] utilities,
-                            Parameters parameters) {
+    private void printStats(double[][][] statTables, Statistics statistics, Mode mode, int[] newOrder, List<AlgorithmSimulationWrapper> algorithmSimulationWrappers, List<AlgorithmWrapper> algorithmWrappers, List<SimulationWrapper> simulationWrappers, double[] utilities, Parameters parameters) {
 
         if (mode == Mode.Average) {
             this.out.println("AVERAGE VALUE");
@@ -1579,11 +1505,10 @@ public class Comparison {
             }
 
             int rows = algorithmSimulationWrappers.size() + 1;
-            int cols = (isShowSimulationIndices() ? 1 : 0) + (isShowAlgorithmIndices() ? 1 : 0) + numStats
-                    + (isShowUtilities() ? 1 : 0);
+            int cols = (isShowSimulationIndices() ? 1 : 0) + (isShowAlgorithmIndices() ? 1 : 0) + numStats + (isShowUtilities() ? 1 : 0);
 
             TextTable table = new TextTable(rows, cols);
-            table.setDelimiter(TextTable.Delimiter.JUSTIFIED);
+            table.setDelimiter(tabDelimitedTables ? TextTable.Delimiter.TAB : TextTable.Delimiter.JUSTIFIED);
 
             int initialColumn = 0;
 
@@ -1591,8 +1516,7 @@ public class Comparison {
                 table.setToken(0, initialColumn, "Sim");
 
                 for (int t = 0; t < algorithmSimulationWrappers.size(); t++) {
-                    Simulation simulation = algorithmSimulationWrappers.get(newOrder[t]).
-                            getSimulationWrapper();
+                    Simulation simulation = algorithmSimulationWrappers.get(newOrder[t]).getSimulationWrapper();
                     table.setToken(t + 1, initialColumn, "" + (simulationWrappers.indexOf(simulation) + 1));
                 }
 
@@ -1647,11 +1571,6 @@ public class Comparison {
 
                     double stat = statTables[u][newOrder[t]][statIndex];
 
-                    // Messes up statistical analysis of comparison data.
-//                    if (stat == 0.0) {
-//                        table.setToken(t + 1, initialColumn + statIndex, "-");
-//                    } else
-
                     if (stat == Double.POSITIVE_INFINITY) {
                         table.setToken(t + 1, initialColumn + statIndex, "Yes");
                     } else if (stat == Double.NEGATIVE_INFINITY) {
@@ -1659,8 +1578,7 @@ public class Comparison {
                     } else if (Double.isNaN(stat)) {
                         table.setToken(t + 1, initialColumn + statIndex, "*");
                     } else {
-                        table.setToken(t + 1, initialColumn + statIndex,
-                                FastMath.abs(stat) < FastMath.pow(10, -smallNf.getMaximumFractionDigits()) && stat != 0 ? smallNf.format(stat) : nf.format(stat));
+                        table.setToken(t + 1, initialColumn + statIndex, FastMath.abs(stat) < FastMath.pow(10, -smallNf.getMaximumFractionDigits()) && stat != 0 ? smallNf.format(stat) : nf.format(stat));
                     }
                 }
 
@@ -1675,8 +1593,7 @@ public class Comparison {
         }
     }
 
-    private double[] calcUtilities(Statistics statistics, List<AlgorithmSimulationWrapper> wrappers,
-                                   double[][] stats) {
+    private double[] calcUtilities(Statistics statistics, List<AlgorithmSimulationWrapper> wrappers, double[][] stats) {
 
         // Calculate utilities for the first table.
         double[] utilities = new double[wrappers.size()];
@@ -1707,8 +1624,7 @@ public class Comparison {
         return utilities;
     }
 
-    private int[] sort(List<AlgorithmSimulationWrapper> algorithmSimulationWrappers,
-                       double[] utilities) {
+    private int[] sort(List<AlgorithmSimulationWrapper> algorithmSimulationWrappers, double[] utilities) {
         List<Integer> order = new ArrayList<>();
         for (int t = 0; t < algorithmSimulationWrappers.size(); t++) {
             order.add(t);
@@ -1751,8 +1667,7 @@ public class Comparison {
                 Node node1 = DataModel.getVariable(edge.getNode1().getName());
                 Node node2 = DataModel.getVariable(edge.getNode2().getName());
 
-                if (node1 instanceof DiscreteVariable
-                        && node2 instanceof DiscreteVariable) {
+                if (node1 instanceof DiscreteVariable && node2 instanceof DiscreteVariable) {
                     newGraph.addEdge(edge);
                 }
             }
@@ -1765,8 +1680,7 @@ public class Comparison {
                 Node node1 = DataModel.getVariable(edge.getNode1().getName());
                 Node node2 = DataModel.getVariable(edge.getNode2().getName());
 
-                if (node1 instanceof ContinuousVariable
-                        && node2 instanceof ContinuousVariable) {
+                if (node1 instanceof ContinuousVariable && node2 instanceof ContinuousVariable) {
                     newGraph.addEdge(edge);
                 }
             }
@@ -1779,13 +1693,11 @@ public class Comparison {
                 Node node1 = DataModel.getVariable(edge.getNode1().getName());
                 Node node2 = DataModel.getVariable(edge.getNode2().getName());
 
-                if (node1 instanceof DiscreteVariable
-                        && node2 instanceof ContinuousVariable) {
+                if (node1 instanceof DiscreteVariable && node2 instanceof ContinuousVariable) {
                     newGraph.addEdge(edge);
                 }
 
-                if (node1 instanceof ContinuousVariable
-                        && node2 instanceof DiscreteVariable) {
+                if (node1 instanceof ContinuousVariable && node2 instanceof DiscreteVariable) {
                     newGraph.addEdge(edge);
                 }
             }
@@ -1795,14 +1707,18 @@ public class Comparison {
     }
 
     /**
+     * Sets the flag indicating whether tab-delimited tables should be used.
+     *
+     * @param tabDelimitedTables true if tab-delimited tables should be used; false otherwise
+     */
+    public void setTabDelimitedTables(boolean tabDelimitedTables) {
+        this.tabDelimitedTables = tabDelimitedTables;
+    }
+
+    /**
      * An enum of comparison graphs types.
      */
     public enum ComparisonGraph {
-
-        /**
-         * Constant for the true DAG.
-         */
-        true_DAG,
 
         /**
          * Constant for the CPDAG of the true DAG.
@@ -1812,11 +1728,44 @@ public class Comparison {
         /**
          * Constant for the PAG of the true DAG.
          */
-        PAG_of_the_true_DAG
+        PAG_of_the_true_DAG,
+
+        /**
+         * Constant for the true DAG.
+         */
+        true_DAG
+
     }
 
+    /**
+     * The Mode class represents different calculation modes for a given dataset.
+     */
     private enum Mode {
-        Average, StandardDeviation, MinValue, MaxValue, MedianValue
+        /**
+         * Represents the average calculation mode.
+         */
+        Average,
+
+        /**
+         * Represents the calculation mode for finding the maximum value in a dataset.
+         */
+        MaxValue,
+
+        /**
+         * The MedianValue class represents a calculation mode for finding the median value in a dataset.
+         */
+        MedianValue,
+
+        /**
+         * Represents the calculation mode for finding the minimum value in a dataset.
+         */
+        MinValue,
+
+        /**
+         * Represents the standard deviation calculation mode.
+         */
+        StandardDeviation
+
     }
 
     /**
@@ -1848,8 +1797,8 @@ public class Comparison {
         }
 
         @Override
-        public Graph search(DataModel DataModel, Parameters parameters) {
-            return this.algorithm.search(DataModel, this.parameters);
+        public Graph search(DataModel data, Parameters parameters) {
+            return this.algorithm.search(data, this.parameters);
         }
 
         @Override
@@ -1922,13 +1871,13 @@ public class Comparison {
         /**
          * <p>search.</p>
          *
-         * @param DataModel  a {@link edu.cmu.tetrad.data.DataModel} object
+         * @param data       a {@link edu.cmu.tetrad.data.DataModel} object
          * @param parameters a {@link edu.cmu.tetrad.util.Parameters} object
          * @return a {@link edu.cmu.tetrad.graph.Graph} object
          */
         @Override
-        public Graph search(DataModel DataModel, Parameters parameters) {
-            return this.algorithmWrapper.getAlgorithm().search(DataModel, parameters);
+        public Graph search(DataModel data, Parameters parameters) {
+            return this.algorithmWrapper.getAlgorithm().search(data, parameters);
         }
 
         /**
@@ -2001,21 +1950,18 @@ public class Comparison {
          * The simulation.
          */
         private final Simulation simulation;
-
+        /**
+         * The parameters.
+         */
+        private final Parameters parameters;
         /**
          * The graphs.
          */
         private List<Graph> graphs;
-
         /**
          * The data models.
          */
         private List<DataModel> dataModels;
-
-        /**
-         * The parameters.
-         */
-        private Parameters parameters;
 
         /**
          * {@inheritDoc}
@@ -2024,7 +1970,7 @@ public class Comparison {
             this.simulation = simulation;
 
             // There is no harm in allowing the simulation code to add parameters here; they can
-            // be displayed in the output table if desired. jdramsey 20170118
+            // be displayed in the output table if desired. Jdramsey 20170118
             this.parameters = new Parameters(parameters);
         }
 
@@ -2100,14 +2046,11 @@ public class Comparison {
         }
 
         /**
-         * {@inheritDoc}
-         */
-        public void setParameters(Parameters parameters) {
-            this.parameters = new Parameters(parameters);
-        }
-
-        /**
-         * {@inheritDoc}
+         * Set the value of a parameter.
+         *
+         * @param name  The name of the parameter.
+         * @param value The value of the parameter.
+         * @throws IllegalArgumentException if the value is not an instance of Number.
          */
         public void setValue(String name, Object value) {
             if (!(value instanceof Number)) {
@@ -2147,42 +2090,19 @@ public class Comparison {
 
     /**
      * A run.
+     *
+     * @param algSimIndex The algorithm simulation index.
+     * @param runIndex    The run index.
      */
-    private static class Run {
-
-        /**
-         * The algorithm simulation index.
-         */
-        private final int algSimIndex;
-
-        /**
-         * The run index.
-         */
-        private final int runIndex;
-
-        /**
-         * The index.
-         */
-        private final int index;
-
-        /**
-         * The wrapper.
-         */
-        private final AlgorithmSimulationWrapper wrapper;
+    private record Run(int algSimIndex, int runIndex) {
 
         /**
          * Constructs a new run.
          *
          * @param algSimIndex the algorithm simulation index
          * @param runIndex    the run index
-         * @param index       the index
-         * @param wrapper     the wrapper
          */
-        public Run(int algSimIndex, int runIndex, int index, AlgorithmSimulationWrapper wrapper) {
-            this.runIndex = runIndex;
-            this.algSimIndex = algSimIndex;
-            this.index = index;
-            this.wrapper = wrapper;
+        private Run {
         }
 
         /**
@@ -2190,7 +2110,8 @@ public class Comparison {
          *
          * @return the algorithm simulation index
          */
-        public int getAlgSimIndex() {
+        @Override
+        public int algSimIndex() {
             return this.algSimIndex;
         }
 
@@ -2199,27 +2120,11 @@ public class Comparison {
          *
          * @return the run index
          */
-        public int getRunIndex() {
+        @Override
+        public int runIndex() {
             return this.runIndex;
         }
 
-        /**
-         * <p>Getter for the field <code>index</code>.</p>
-         *
-         * @return the index
-         */
-        public int getIndex() {
-            return this.index;
-        }
-
-        /**
-         * <p>Getter for the field <code>wrapper</code>.</p>
-         *
-         * @return the wrapper
-         */
-        public AlgorithmSimulationWrapper getWrapper() {
-            return this.wrapper;
-        }
     }
 
     /**
@@ -2231,11 +2136,6 @@ public class Comparison {
          * The algorithm simulation wrappers.
          */
         private final List<AlgorithmSimulationWrapper> algorithmSimulationWrappers;
-
-        /**
-         * The algorithm wrappers.
-         */
-        private final List<AlgorithmWrapper> algorithmWrappers;
 
         /**
          * The simulation wrappers.
@@ -2271,7 +2171,6 @@ public class Comparison {
          * Constructs a new algorithm task.
          *
          * @param algorithmSimulationWrappers the algorithm simulation wrappers
-         * @param algorithmWrappers           the algorithm wrappers
          * @param simulationWrappers          the simulation wrappers
          * @param statistics                  the statistics
          * @param numGraphTypes               the number of graph types
@@ -2280,11 +2179,10 @@ public class Comparison {
          * @param stdout                      the standard output
          */
         public AlgorithmTask(List<AlgorithmSimulationWrapper> algorithmSimulationWrappers,
-                             List<AlgorithmWrapper> algorithmWrappers, List<SimulationWrapper> simulationWrappers,
-                             Statistics statistics, int numGraphTypes, double[][][][] allStats, Run run, PrintStream stdout) {
+                             List<SimulationWrapper> simulationWrappers, Statistics statistics,
+                             int numGraphTypes, double[][][][] allStats, Run run, PrintStream stdout) {
             this.algorithmSimulationWrappers = algorithmSimulationWrappers;
             this.simulationWrappers = simulationWrappers;
-            this.algorithmWrappers = algorithmWrappers;
             this.statistics = statistics;
             this.numGraphTypes = numGraphTypes;
             this.allStats = allStats;
@@ -2296,12 +2194,10 @@ public class Comparison {
          * Does a run.
          *
          * @return true.
-         * @throws java.lang.Exception if any.
          */
         @Override
-        public Boolean call() throws Exception {
-            doRun(this.algorithmSimulationWrappers, this.algorithmWrappers,
-                    this.simulationWrappers, this.statistics, this.numGraphTypes, this.allStats, this.run, this.stdout);
+        public Boolean call() {
+            doRun(this.algorithmSimulationWrappers, this.simulationWrappers, this.statistics, this.numGraphTypes, this.allStats, this.run, this.stdout);
             return true;
         }
     }
